--- a/css/vis.css
+++ b/css/vis.css
@@ -1,44 +1,53 @@
 @charset "utf-8";
-body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  width: 1900px;
-  height: 850px;
-  position: relative;
-  font-size:10px;
-}
 
-svg {
+/**GLOBAL STYLES **/
+body {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size:10px;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	margin: 0;
+}
+.component { float:left; }
+
+/** CIRCULAR STYLES **/
+#vis-pie {
+	width: 67%;
+	min-width: 850px;
+	height: 850px;
+}
+#vis-pie svg {
 	width: 100%;
 	height: 100%;
 }
 
-path.slice{
-	/*stroke-width:.5px;
-	stroke: #333;*/
-}
+#vis-pie path.slice{ fill: #555; }
+#vis-pie .active path.slice, #vis-pie .selected path.slice  { fill: #f5ee31 !important; }
+#vis-pie .selected-connection path.slice { stroke: #f5ee31; stroke-width: 2px; }
 
-.active path.slice, .selected path.slice  { fill: #f5ee31 !important; }
-.selected-connection path.slice { stroke: #f5ee31; stroke-width: 2px; }
-
-g.label-box { display:none; }
-.active g.label-box, .selected g.label-box, .selected-connection g.label-box { display:block; }
-polyline {
+#vis-pie g.label-box { display:none; }
+#vis-pie .active g.label-box, #vis-pie .selected g.label-box, #vis-pie .selected-connection g.label-box { display:block; }
+#vis-pie polyline {
 	opacity: .5;
 	stroke: #666;
-	stroke-width: 2px;
+	stroke-width: 1px;
 	fill: none;
 }
-text { font-size: 20pt; }
+#vis-pie text { font-size: 13pt; }
 
-g.chordsBox path {
+#vis-pie g.chordsBox path {
 	stroke: #666;
 	opacity: .5;
 	stroke-width: 2px;
 	fill:none;
 	display:none;
 }
+#vis-pie g.chordsBox path.active, #vis-pie g.chordsBox path.selected, #vis-pie g.chordsBox path.core-selected { display:block; }
+#vis-pie g.chordsBox path.selected { stroke: #000; opacity: .8; }
+#vis-pie g.chordsBox path.core-selected { stroke: #7B38CF; opacity: .8; }
 
-g.chordsBox path.active, g.chordsBox path.selected, g.chordsBox path.core-selected { display:block; }
-g.chordsBox path.selected { stroke: #000; opacity: .8; }
-g.chordsBox path.core-selected { stroke: #7B38CF; opacity: .8; }
+/**ADD MORE STYLES HERE**/
 
+#vis-controls { width: 20%; height: 100%; }
+#vis-detail { width: 10%; height:100%; }
