--- a/css/vis.css
+++ b/css/vis.css
@@ -5,6 +5,7 @@ body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size:10px;
 	width: 100%;
+	min-width:1500px;
 	height: 100%;
 	padding: 0;
 	margin: 0;
@@ -13,8 +14,7 @@ body {
 
 /** CIRCULAR STYLES **/
 #vis-pie {
-	width: 67%;
-	min-width: 950px;
+	width: 950px;
 	height: 950px;
 }
 #vis-pie svg {
@@ -22,7 +22,7 @@ body {
 	height: 100%;
 }
 
-#vis-pie path.slice{ fill: #555; }
+#vis-pie path.slice { fill: #555; }
 #vis-pie .active path.slice, #vis-pie .selected path.slice  { fill: #f5ee31 !important; }
 #vis-pie .selected-connection path.slice { stroke: #f5ee31; stroke-width: 2px; }
 
@@ -52,7 +52,16 @@ body {
 #vis-pie g.chordsBox path.selected { stroke: #000; opacity: .8; }
 #vis-pie g.chordsBox path.core-selected { stroke: #7B38CF; opacity: .8; }
 
+/** DETAIL STYLES **/
+#vis-detail { width: 200px; height:100%; display:none; font-size: 12px; background-color: #bcbdc0; padding: 5px; color:#fff;}
+#vis-detail.viewable {  display: block; }
+#vis-detail #detail-head {  margin-bottom: 10px; padding: 5px; }
+#vis-detail #title-box { width: 150px; float:left; background-color: #d72829; padding: 5px; margin-left:-10px;}
+#vis-detail #title-box h3 { margin: 0; font-size:16px; padding:0; }
+#vis-detail #title-box h4 { margin: 0; padding: 0; }
+#vis-detail img { float:right; margin-right: -10px; margin-top: -10px;}
+#vis-detail table th { text-align: left; vertical-align: top; padding-right: 10px; }
+
 /**ADD MORE STYLES HERE**/
 
-#vis-controls { width: 20%; height: 100%; }
-#vis-detail { width: 10%; height:100%; }
+#vis-controls { width: 300px; height: 100%; }
