--- a/css/vis.css
+++ b/css/vis.css
@@ -27,25 +27,26 @@ body {
 #vis-pie path.slice { stroke: #ccc; stroke-width: 1px; }
 #vis-pie .active path.slice, #vis-pie .selected path.slice  { fill: #f5ee31 !important; }
 #vis-pie .selected-connection path.slice { stroke: #f5ee31; stroke-width: 2px; }
-#vis-pie text.name-only { display: none; }
 
 /* LABELS */
 #vis-pie g.label-box  { display:none; }
 /*#vis-pie #pieSliceBox > g:nth-child(5n) g.label-box  { display:block; }*/
 #vis-pie .active g.label-box, #vis-pie .selected g.label-box, #vis-pie .selected-connection g.label-box { display:block; }
-#vis-pie text { font-size: 11px; }
+#vis-pie text { font-size: 11px; dominant-baseline: middle; }
 #vis-pie text.instances { fill: #7B38CF; }
+#vis-pie text.name-only { display: none; }
 
 /* CHORDS */
 #vis-pie #chordsBox, #vis-pie #barsBox { display: none; }
 #vis-pie #pieBox.chords #chordsBox, #vis-pie #pieBox.bars #barsBox { display: block; }
 #vis-pie #chordsBox path {
 	stroke: #666;
-	opacity: .5;
-	stroke-width: 2px;
+	opacity: .2;
+	stroke-width: 1px;
 	fill:none;
 	display:none;
 }
+#vis-pie #chordsBox path.core { stroke-width: 2px; stroke: #7B38CF; }
 #vis-pie #chordsBox path.active, #vis-pie #chordsBox path.selected, #vis-pie #chordsBox path.core-selected { display:block; }
 #vis-pie #chordsBox path.selected { stroke: #000; opacity: .8; }
 #vis-pie #chordsBox path.core-selected { stroke: #7B38CF; opacity: .8; }
@@ -55,7 +56,7 @@ body {
 #vis-pie #barsBox text.ref { fill: #06637f; font-size:9px; font-weight:bold; }
 #vis-pie #barsBox path { fill: #aaa; }
 #vis-pie #barsBox .active path, #vis-pie #barsBox .selected path { fill: #000; }
-#vis-pie #barsBox .bar-label { font-size: 8px; dominant-baseline: middle; display:none; }
+#vis-pie #barsBox .bar-label { font-size: 8px; display:none; }
 #vis-pie #barsBox .active .bar-label, #vis-pie #barsBox .selected .bar-label  { display:block; }
 
 /** DETAIL STYLES **/
