search autosuggest complete

--- a/css/vis.css
+++ b/css/vis.css
@@ -113,6 +113,8 @@ body {
 #vis-controls .sidebar {
   display: none;
 }
+#searchClear:hover { cursor: pointer; }
+
 @media (min-width: 768px) {
 #vis-controls   .sidebar {
     position: fixed;
